Fix bug where content container is behind mobile header

--- a/src/components/header.scss
+++ b/src/components/header.scss
@@ -78,7 +78,7 @@
 @media only screen and (max-width: 889px) {
   .header {
     height: 50px;
-    position: absolute;
+    position: inherit;
   }
 
   .header--primary {
